samples/_failures_safe/1761076337_61e213_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_accf9a7b.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_accf9a7b.c:143:33: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  143 |         while (!lexer_is_at_end(lex
      |                                 ^~~
      |                                 lexer
./samples/SAFE/__tmp_accf9a7b.c:143:33: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_accf9a7b.c:143:36: error: expected ‘)’ at end of input
  143 |         while (!lexer_is_at_end(lex
      |                                ~   ^
      |                                    )
./samples/SAFE/__tmp_accf9a7b.c:143:9: error: expected declaration or statement at end of input
  143 |         while (!lexer_is_at_end(lex
      |         ^~~~~
./samples/SAFE/__tmp_accf9a7b.c:143:9: error: expected declaration or statement at end of input
